--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,54 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tz</groupId>
-  <artifactId>springcloud-mult-modular-api</artifactId>
+  <groupId>com.tz.cloud</groupId>
+  <artifactId>project-cloud</artifactId>
   <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
+  <modules>
+    <module>project-eureka</module>
+  </modules>
+
   <name>project-cloud</name>
 
+  <properties>
+    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+    <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
+  </properties>
 
+  <!-- 依赖声明 -->
+  <dependencyManagement>
+    <dependencies>
 
+      <!--cloud -->
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 
+      <dependency>
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-dependencies</artifactId>
+        <version>${spring-boot-admin.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 
+      <!-- SpringBoot的依赖配置 -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 
-
+    </dependencies>
+  </dependencyManagement>
 
 </project>
