--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <modules>
     <module>project-eureka</module>
+    <module>project-config</module>
   </modules>
 
   <name>project-cloud</name>
