--- a/project-monitor/pom.xml
+++ b/project-monitor/pom.xml
@@ -28,6 +28,18 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
+    <!--web 模块 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <!--排除tomcat依赖 -->
+        <exclusion>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+          <groupId>org.springframework.boot</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     <!--undertow容器 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
