--- a/project-common/project-common-redis/pom.xml
+++ b/project-common/project-common-redis/pom.xml
@@ -31,6 +31,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
     </dependency>
+
+    <!-- lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
   </dependencies>
 
 
