--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>project-config</module>
     <module>project-monitor</module>
     <module>project-common</module>
+    <module>project-gateway</module>
   </modules>
 
   <name>project-cloud</name>
