新增Swagger配置类

--- a/project-common/pom.xml
+++ b/project-common/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>project-common-core</module>
     <module>project-common-redis</module>
+    <module>project-common-swagger</module>
   </modules>
 
 
