--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
         <artifactId>swagger-bootstrap-ui</artifactId>
         <version>${swagger.bootstrap-ui.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-bean-validators</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
