--- a/project-gateway/pom.xml
+++ b/project-gateway/pom.xml
@@ -32,6 +32,24 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
     </dependency>
+
+    <!-- common模块 -->
+    <dependency>
+      <groupId>com.tz.cloud</groupId>
+      <artifactId>project-common-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <!-- swagger-bootstrap-ui -->
+    <dependency>
+      <groupId>com.github.xiaoymin</groupId>
+      <artifactId>swagger-bootstrap-ui</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+    </dependency>
   </dependencies>
 
 
