--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <jedis.version>2.9.0</jedis.version>
     <swagger.version>2.9.2</swagger.version>
     <swagger-ui.version>1.9.5</swagger-ui.version>
+    <poi.version>3.17</poi.version>
   </properties>
 
   <!-- 依赖声明 -->
@@ -76,6 +77,13 @@
         <groupId>redis.clients</groupId>
         <artifactId>jedis</artifactId>
         <version>${jedis.version}</version>
+      </dependency>
+
+      <!-- excel工具 -->
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>${poi.version}</version>
       </dependency>
 
       <!-- Swagger -->
