--- a/project-common/project-common-core/pom.xml
+++ b/project-common/project-common-core/pom.xml
@@ -71,9 +71,11 @@
       <artifactId>swagger-bootstrap-ui</artifactId>
     </dependency>
 
+    <!-- excel工具 -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+    </dependency>
 
   </dependencies>
-
-
-
 </project>
