--- a/project-eureka/src/main/resources/application-dev.yml
+++ b/project-eureka/src/main/resources/application-dev.yml
@@ -11,4 +11,4 @@ eureka:
       #单机
       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-#      defaultZone: http://eureka7002.com:7002,http://eureka7003.com:7003
+      #defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
