--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
     <swagger.version>2.9.2</swagger.version>
     <swagger-ui.version>1.9.5</swagger-ui.version>
     <poi.version>3.17</poi.version>
+    <druid.version>1.1.14</druid.version>
+    <oshi.version>3.9.1</oshi.version>
   </properties>
 
   <!-- 依赖声明 -->
@@ -64,6 +66,20 @@
         <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <!--阿里数据库连接池 -->
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid-spring-boot-starter</artifactId>
+        <version>${druid.version}</version>
+      </dependency>
+
+      <!-- 获取系统信息 -->
+      <dependency>
+        <groupId>com.github.oshi</groupId>
+        <artifactId>oshi-core</artifactId>
+        <version>${oshi.version}</version>
       </dependency>
 
       <!-- fastjson -->
