--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -13,6 +13,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>project-auth</module>
+    <module>project-system</module>
   </modules>
 
 </project>
