--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
     <poi.version>3.17</poi.version>
     <druid.version>1.1.14</druid.version>
     <oshi.version>3.9.1</oshi.version>
+    <pagehelper.boot.version>1.2.12</pagehelper.boot.version>
+    <mapper.starter.version>2.1.5</mapper.starter.version>
+    <oshi.version>3.9.1</oshi.version>
+    <commons.io.version>2.5</commons.io.version>
+    <commons.fileupload.version>1.3.3</commons.fileupload.version>
+    <jsoup.version>1.11.3</jsoup.version>
+    <poi.version>3.17</poi.version>
   </properties>
 
   <!-- 依赖声明 -->
@@ -118,6 +125,47 @@
         <groupId>io.springfox</groupId>
         <artifactId>springfox-bean-validators</artifactId>
         <version>${swagger.version}</version>
+      </dependency>
+      <!-- pagehelper 分页插件 -->
+      <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper-spring-boot-starter</artifactId>
+        <version>${pagehelper.boot.version}</version>
+      </dependency>
+
+      <!-- 获取系统信息 -->
+      <dependency>
+        <groupId>com.github.oshi</groupId>
+        <artifactId>oshi-core</artifactId>
+        <version>${oshi.version}</version>
+      </dependency>
+
+
+      <!--io常用工具类 -->
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons.io.version}</version>
+      </dependency>
+
+      <!--文件上传工具类 -->
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>${commons.fileupload.version}</version>
+      </dependency>
+
+      <!-- HTML解析器 -->
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>${jsoup.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>tk.mybatis</groupId>
+        <artifactId>mapper-spring-boot-starter</artifactId>
+        <version>${mapper.starter.version}</version>
       </dependency>
 
     </dependencies>
