--- a/project-config/src/main/resources/config/project-auth-dev.yml
+++ b/project-config/src/main/resources/config/project-auth-dev.yml
@@ -4,7 +4,7 @@ spring:
     database: 1
     host: 119.23.74.61
     port: 6379
-    password:         # 密码（默认为空）
+    password: qwer@$.. # 密码（默认为空）
     timeout: 6000ms   # 连接超时时长（毫秒）
     lettuce:
       pool:
