--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <commons.fileupload.version>1.3.3</commons.fileupload.version>
     <jsoup.version>1.11.3</jsoup.version>
     <poi.version>3.17</poi.version>
+    <guava.version>26.0-jre</guava.version>
   </properties>
 
   <!-- 依赖声明 -->
@@ -166,6 +167,12 @@
         <groupId>tk.mybatis</groupId>
         <artifactId>mapper-spring-boot-starter</artifactId>
         <version>${mapper.starter.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
       </dependency>
 
     </dependencies>
