--- a/project-service/project-auth/pom.xml
+++ b/project-service/project-auth/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>project-common-redis</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- log模块 -->
+    <dependency>
+      <groupId>com.tz.cloud</groupId>
+      <artifactId>project-common-log</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
