--- a/project-service/project-system/pom.xml
+++ b/project-service/project-system/pom.xml
@@ -87,11 +87,11 @@
       <version>${project.version}</version>
     </dependency>
     <!-- 日志模块 -->
-<!--    <dependency>-->
-<!--      <groupId>com.tz.cloud</groupId>-->
-<!--      <artifactId>project-common-log</artifactId>-->
-<!--      <version>${project.version}</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.tz.cloud</groupId>
+      <artifactId>project-common-log</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <!-- 权限模块 -->
 <!--    <dependency>-->
 <!--      <groupId>com.tz.cloud</groupId>-->
